{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 6,
  "lineage": "56b045cf-39a4-0977-cafb-902e20d073af",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:202449767955:security-group/sg-04be761f24c66cfee",
            "description": "EKS cluster test control plane security group.",
            "egress": [],
            "id": "sg-04be761f24c66cfee",
            "ingress": [],
            "name": "eks_cluster_test_control_plane_sg",
            "name_prefix": "",
            "owner_id": "202449767955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster_test_control_plane_sg"
            },
            "tags_all": {
              "Name": "eks_cluster_test_control_plane_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0565a7a1e194bbbd9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:202449767955:security-group/sg-005f5334c30a7b486",
            "description": "Security group for all worker nodes in the cluster.",
            "egress": [],
            "id": "sg-005f5334c30a7b486",
            "ingress": [],
            "name": "eks_cluster_test_worker_sg",
            "name_prefix": "",
            "owner_id": "202449767955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster_test_worker_sg"
            },
            "tags_all": {
              "Name": "eks_cluster_test_worker_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0565a7a1e194bbbd9"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}